vistula.png changed to vistula.jpg

--- a/Projekt66797/src/main/resources/templates/greeting.html
+++ b/Projekt66797/src/main/resources/templates/greeting.html
@@ -12,6 +12,6 @@
   Maecenas vestibulum dignissim malesuada.
 </p>
 
-<img th:src="@{/images/vistula.png}" width="600" height="600" />
+<img th:src="@{/images/vistula.jpg}" width="600" height="600" />
 </body>
 </html>
